--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,10 @@
   "require": {
     "typo3/cms-core": "^9.4 || ^10.4",
     "fluidtypo3/flux": "^9.1"
-  }
+  },
+  "extra": {
+   "typo3/cms": {
+     "extension-key": "flux_kesearch_indexer"
+   }
+ }
 }
