--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,12 @@
     }
   },
   "require": {
-    "typo3/cms-core": "^9.4 || ^10.4",
+    "typo3/cms-core": "^11.5",
     "fluidtypo3/flux": "^9.1"
   },
   "extra": {
-   "typo3/cms": {
-     "extension-key": "flux_kesearch_indexer"
-   }
- }
+    "typo3/cms": {
+      "extension-key": "flux_kesearch_indexer"
+    }
+  }
 }
